Encapsulating fields Clarifying by renames Added Jackson Megamodel scenario Moved JavaC Megamodel